Corrige vulnerabilidades de segurança identificadas em auditoria
- Broken Access Control: adiciona validação de autorização em todos os
  endpoints de CategoriaController e RelatorioController
- JWT: valida emailVerificado antes de autenticar via token
- CORS: remove allowedHeaders wildcard, lista explícita de headers permitidos;
  remove @CrossOrigin(origins="*") duplicados dos controllers
- Senhas: aumenta mínimo para 8 chars, exige maiúscula, minúscula e número
- Códigos de verificação: substitui numérico 6 dígitos por alfanumérico 8
  chars com charset sem ambiguidade; limita a 5 tentativas por código
- Rate limiting: implementa RateLimiterService em memória; aplica 5/min no
  login e 3/h em reset/reenvio de verificação
- Convite: remove casalId desnecessário da resposta pública
- docker-compose: usa variáveis de ambiente para credenciais do banco
- Adiciona .env.example como referência para configuração local